--- a/hbddadjoonm.html
+++ b/hbddadjoonm.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>HBD</title>
+<title>تولدت مبارک</title>
 <style>
-    @font-face {
-        font-family: a;
-        src: url(./Mj_Ghalam-1.TTF);
-    }
+  @font-face {
+      font-family: a;
+      src: url(./Mj_Ghalam-1.TTF);
+  }
   body {
     margin: 0;
     height: 100vh;
@@ -31,13 +31,19 @@
 
   .emoji {
     position: absolute;
-    top: -50px;
-    font-size: 2em;
+    top: -80px;
     animation-name: fall;
     animation-duration: 5s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
     will-change: transform;
+  }
+
+  .emoji img {
+    width: 60px;
+    height: 60px;
+    object-fit: contain;
+    pointer-events: none;
   }
 
   @keyframes fall {
@@ -57,14 +63,25 @@
 <h1>بابا جونم تولدت مبارک</h1>
 
 <script>
-  const emojis = ["❤️", "🎉", "🥰","💋"];
-  for(let i=0; i<30; i++){
+  const images = [
+    "./174-1746878_ios-emoji-emoji-iphone-ios-heart-hearts-spin.png",
+    "./party-popper_1f389.png",
+    "./kiss-mark_1f48b.png",
+    "./party-popper_1f389.png"
+  ];
+
+  for(let i = 0; i < 30; i++) {
     const span = document.createElement("span");
     span.className = "emoji";
-    span.innerText = emojis[Math.floor(Math.random()*emojis.length)];
-    span.style.left = Math.random()*100 + "vw";
-    span.style.animationDelay = Math.random()*5 + "s";
-    span.style.fontSize = (Math.random()*30+20) + "px";
+
+    const img = document.createElement("img");
+    img.src = images[Math.floor(Math.random() * images.length)];
+    img.style.width = (Math.random() * 40 + 30) + "px";
+
+    span.style.left = Math.random() * 100 + "vw";
+    span.style.animationDelay = Math.random() * 5 + "s";
+
+    span.appendChild(img);
     document.body.appendChild(span);
   }
 </script>
