--- a/mooon.html
+++ b/mooon.html
@@ -105,6 +105,7 @@
     .overlay-text {
       position: absolute;
       top: 18px;
+      white-space: nowrap;
       right: 18px;
       display: flex;
       align-items: center;
