--- a/mooon.html
+++ b/mooon.html
@@ -143,6 +143,7 @@
       text-shadow: 0 0 8px rgb(0 15 255 / 60%), 0 0 20px rgba(0, 123, 255, 0.5), 0 0 40px rgba(0, 123, 255, 0.3);
       -webkit-text-stroke: 1px rgba(255, 255, 255, 0.25);
       letter-spacing: 1px;
+      white-space: nowrap;
       transition: text-shadow 0.4s ease;
     }
     .reveal-sub {
