--- a/mooon.html
+++ b/mooon.html
@@ -44,7 +44,7 @@
       width: 220px;
       height: 220px;
       border-radius: 50%;
-      background: url("./Full_moon.png") center/cover no-repeat;
+      background: url("./Full_moon.webp") center/cover no-repeat;
       box-shadow: 0 0 40px rgba(255, 255, 255, 0.6);
       animation: breathe 4s ease-in-out infinite;
       margin-bottom: 24px;
