--- a/bazi.html
+++ b/bazi.html
@@ -21,7 +21,7 @@ body {
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: min(160vw, 650px);
+  width: min(160vw, 500px);
   animation: float 3s ease-in-out infinite;
   cursor: pointer;
 }
@@ -62,9 +62,7 @@ body {
 </style>
 </head>
 <body>
-
-<img src="./Ghibli Style Character with Sunglasses.png" class="character">
-
+<img src="/Ghibli Characters Hugging.png" class="character">
 <div id="dialog">
   <div class="dialog-content">
     <p></p>
