--- a/bazi.html
+++ b/bazi.html
@@ -62,7 +62,7 @@ body {
 </style>
 </head>
 <body>
-<img src="/Ghibli Characters Hugging.png" class="character">
+<img src="./Ghibli Characters Hugging.png" class="character">
 <div id="dialog">
   <div class="dialog-content">
     <p></p>
