--- a/index.html
+++ b/index.html
@@ -1,203 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A♾️A</title>
-  <link rel="icon" type="image/png" href="./a-retro-styled-pixel-art-illustration-of-a-mini-blue-heart-icon-free-png-removebg-preview.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="./a-retro-styled-pixel-art-illustration-of-a-mini-blue-heart-icon-free-png-removebg-preview.png" sizes="32x32">
   <style>
     @font-face {
-        font-family: a;
-        src: url(./Mj_Ghalam-1.TTF);
-    }
-    @font-face {
-        font-family: b;
-        src: url(./Fedra\ Arabic\ Display\ AR\ LT\ Black.ttf);
+      font-family: a;
+      src: url(./katibeh.ttf);
     }
 
     body {
-      font-family: a, b;
+      margin: 0;
+      height: 100vh;
+      background: linear-gradient(135deg, #0a1a33, #102a56);
       display: flex;
+      direction: rtl;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #1a1a2e;
-      color: #ffffff;
-      overflow: hidden;
-      text-align: center;
-    }
-
-    #translations {
-      position: relative;
-      width: 80%;
-      max-width: 800px;
-    }
-
-    #persian-text {
-      font-size: 6vw; 
-      font-weight: bold;
-      margin-bottom: 20px;
-      color: #ffffff;
       font-family: a;
-      text-shadow: 0 0 10px rgba(255, 255, 255, 0.6); 
+      overflow: hidden;
     }
 
-    .translation {
-      opacity: 0;
-      font-size: 4vw; 
-      font-weight: 500;
+    .card {
+      background: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(10px);
+      padding: 40px;
+      border-radius: 20px;
+      text-align: center;
+      box-shadow: 0 0 30px rgba(0, 120, 255, 0.3);
+      max-width: 350px;
+      border: 1px solid rgba(255,255,255,0.1);
+    }
+
+    h1 {
+      color: #8bbcff;
+    }
+
+    p {
+      font-size: 18px;
+      color: #dbe9ff;
       margin: 10px 0;
-      color: darkorange;
-      transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-      display: block;
-      transform: scale(1);
     }
 
-    .translation.show {
-      opacity: 1;
-      transform: scale(1.05); 
+    button {
+      margin-top: 20px;
+      padding: 12px 25px;
+      border: none;
+      font-family: a;
+      border-radius: 25px;
+      background: #1e4fff;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      transition: 0.3s;
+      box-shadow: 0 5px 15px rgba(30,79,255,0.5);
     }
-    @media (max-width: 600px) {
-      #persian-text {
-        font-size: 6vw; 
+
+    button:hover {
+      background: #3b6cff;
+      transform: scale(1.05);
+    }
+
+    .float {
+      position: absolute;
+      font-size: 22px;
+      animation: floatUp 4s linear forwards;
+      pointer-events: none;
+    }
+
+    @keyframes floatUp {
+      from {
+        transform: translateY(0);
+        opacity: 1;
       }
-
-      .translation {
-        font-size: 4vw;
+      to {
+        transform: translateY(-220px);
+        opacity: 0;
       }
     }
-
   </style>
 </head>
+
 <body>
 
-<div id="translations">
-  <div id="persian-text">آیلینم دوست دارم زیااد</div>
-  <div class="translation" id="translation"></div>
-</div>
+  <audio autoplay loop>
+    <source src="music.mp3" type="audio/mpeg">
+  </audio>
 
-<script>
-const translations = [
-  "I love you so much, Aylin",
-  "أحبك كثيرا، آيلين",
-  "Je t'aime tellement, Aylin",
-  "Te quiero mucho, Aylin",
-  "Ich liebe dich so sehr, Aylin",
-  "Ti amo così tanto, Aylin",
-  "Eu te amo tanto, Aylin",
-  "Ik hou zoveel van je, Aylin",
-  "Я тебя так люблю, Айлин",
-  "我非常爱你，艾琳",
-  "アイリン、大好きだよ",
-  "아이린아, 사랑해",
-  "आयलिन, मैं तुमसे बहुत प्यार करता हूँ",
-  "আয়লিন, আমি তোমাকে অনেক ভালোবাসি",
-  "آیلین، میں تم سے بہت محبت کرتا ہوں",
-  "Seni çok seviyorum, Aylin",
-  "Σ' αγαπώ πολύ, Αϊλίν",
-  "Kocham cię bardzo, Aylin",
-  "Miluji tě tolik, Aylin",
-  "Jag älskar dig så mycket, Aylin",
-  "Rakastan sinua niin paljon, Aylin",
-  "Jeg elsker dig så meget, Aylin",
-  "Jeg elsker deg så mye, Aylin",
-  "Nagyon szeretlek, Aylin",
-  "Te iubesc atât de mult, Aylin",
-  "بحبك جدا يا آيلين",
-  "אני אוהב אותך כל כך, איילין",
-  "ฉันรักคุณมาก, ไอรีน",
-  "Anh yêu em rất nhiều, Aylin",
-  "Aku sangat mencintaimu, Aylin",
-  "Saya sangat sayang padamu, Aylin",
-  "Mahal na mahal kita, Aylin",
-  "Nakupenda sana, Aylin",
-  "Ngiyakuthanda kakhulu, Aylin",
-  "Ek is lief vir jou, Aylin",
-  "Volim te puno, Aylin",
-  "Volim te jako, Aylin",
-  "Volim te puno, Aylin",
-  "Të dua shumë, Aylin",
-  "Те сакам многу, Ајлин",
-  "Обичам те толкова много, Айлън",
-  "Я тебе так люблю, Айлін",
-  "Мен сені өте жақсы көремін, Айлин",
-  "ძალიან მიყვარხარ, აილინი",
-  "Ես շատ սիրում եմ քեզ, Այլին",
-  "اینجا میگم عاشقتممم",
-  "زه تا سره ډېره مينه لرم، آيلين",
-  "आयलिन, म तिमीलाई धेरै माया गर्छु",
-  "ஐலினே, நான் உன்னை மிகவும் காதலிக்கின்றேன்",
-  "ఐలిన్, నేను నిన్ను చాలా ప్రేమిస్తున్నాను",
-  "ಐಲಿನ್, ನಾನು ನಿನ್ನನ್ನು ತುಂಬಾ ಪ್ರೀತಿಸುತ್ತೇನೆ",
-  "ഐലിന്, ഞാന് നിന്നെ വളരെ സ്നേഹിക്കുന്നു",
-  "आयलिन, मी तुला खूप प्रेम करतो",
-  "අයිලින්, මට ඔබට ගොඩක් ආදරෙයි",
-  "આઇલિન, હું તને ઘણો પ્રેમ કરું છું",
-  "ਆਇਲਿਨ, ਮੈਂ ਤੈਨੂੰ ਬਹੁਤ ਪਿਆਰ ਕਰਦਾ ਹਾਂ",
-  "Ez hej te dikim gelek, Aylin",
-  "Waan ku jeclahay aad u badan, Aylin",
-  "M renmen ou anpil, Aylin",
-  "Mo nifẹ rẹ pupọ, Aylin",
-  "A hụrụ m gị n’anya nke ukwuu, Aylin",
-  "Ndiyakuthanda kakhulu, Aylin",
-  "Kuyayki, Aylin",
-  "Aroha ahau ki a koe, Aylin",
-  "Ofa atu, Aylin",
-  "Uo te alofa ia te oe, Aylin",
-  "Kuv hlub koj heev, Aylin",
-  "Aku tresna sampeyan banget, Aylin",
-  "ဧလင်း, ငါသည် အရမ်းချစ်တယ်",
-  "ខ្ញុំស្រឡាញ់អ្នកយ៉ាងខ្លាំង អាយលិន",
-  "ຂ້ອຍຮັກທ່ານຫຼາຍ, ອາຍລິນ",
-  "Би чамд маш их хайртай, Айлин",
-  "आयलिन, म तिमीलाई धेरै माया गर्छु",
-  "ኣይሊን፣ እትምን ዝበለ ፍቕሪ እተይፍረ",
-  "አይሊን፣ በጣም እፍቅሪ አለኝ",
-  "A hụrụ m gị n’anya nke ukwuu, Aylin",
-  "Ngiyakuthanda kakhulu, Aylin",
-  "Kea u rata haholo, Aylin",
-  "Ndiyakuthanda kakhulu, Aylin",
-  "Ndimakukonda kwambiri, Aylin",
-  "Tiako ianao be, Aylin",
-  "Au domoni iko vakalevu, Aylin",
-  "M renmen ou anpil, Aylin",
-  "Mèkpɔ mɔmɔ, Aylin",
-  "Nopp naa la, Aylin",
-  "Medɔ wo paa, Aylin",
-  "N be da sigi, Aylin",
-  "Kuyayki, Aylin",
-  "M renmen ou anpil, Aylin",
-  "Men seni juda sevaman, Aylin",
-  "আমি তোমাকে অনেক ভালোবাসি, আয়লিন",
-  "Inhobbok ħafna, Aylin",
-  "Ľúbim ťa veľmi, Aylin",
-  "Es tevi ļoti mīlu, Aylin",
-  "Ma armastan sind väga, Aylin",
-  "Aš tave labai myliu, Aylin",
-  "Ég elska þig svo mikið, Aylin",
-  "Rakastan sinua niin paljon, Aylin",
-  "Мен сені қатты жақсы көремін, Айлин",
-  "Mahal na mahal kita, Aylin"
-];
-const translationElement = document.getElementById('translation');
-let currentTranslationIndex = 0;
+  <div class="card">
+    <h1>سلامم آیلین جونــم</h1>
+    <p id="msg">تو شخص مورد علاقه منی همسرم✨</p>
 
-function showNextTranslation() {
-  translationElement.classList.remove('show');
-  setTimeout(() => {
-    currentTranslationIndex++;
-    if (currentTranslationIndex >= translations.length) currentTranslationIndex = 0;
-    translationElement.innerText = translations[currentTranslationIndex];
-    translationElement.classList.add('show');
-  }, 500);
-}
+    <button onclick="changeMessage()">
+      دیگه چی؟👀
+    </button>
 
-translationElement.innerText = translations[0];
-translationElement.classList.add('show');
+    <p id="kissCount" style="margin-top:15px; font-size:16px; color:#dbe9ff;"></p>
+  </div>
 
-setInterval(showNextTranslation, 1000);
-</script>
+  <script>
+    const messages = [
+      "سلام آیلین خوشگلم",
+      "خیلی عاشتقم بچه",
+      "دوستت دارممم🩵",
+      "تو خیلی خوشگلی نانازی",
+      "تو خیلی مهربونی",
+      "تو خیلی قند عسلی",
+      "تو خیلی تو دل برویی:)",
+      "تو خیلی آروم جونمی",
+      "تو عمر این آدمی",
+      "تو نقطه امن منــی💕"
+    ];
+
+    const emojis = ["🩵", "✨", "💕", "💋"];
+
+    let clickCount = 0;
+
+    function changeMessage() {
+      clickCount++;
+      const msg = document.getElementById("msg");
+      if (clickCount === 10) {
+        msg.textContent = "یه جوجه تو کیفمه.";
+      } else {
+        const random = Math.floor(Math.random() * messages.length);
+        msg.textContent = messages[random];
+      }
+      createFloat();
+    }
+
+    function createFloat() {
+      const el = document.createElement("div");
+      el.className = "float";
+      el.textContent = emojis[Math.floor(Math.random() * emojis.length)];
+      el.style.left = Math.random() * window.innerWidth + "px";
+      el.style.top = window.innerHeight + "px";
+      document.body.appendChild(el);
+      setTimeout(() => { el.remove(); }, 4000);
+    }
+
+    let kissTime = 30;
+    let kissNumber = getRandomKiss();
+    const kissElement = document.getElementById("kissCount");
+
+    function getRandomKiss() {
+      return Math.floor(Math.random() * 31) + 1;
+    }
+
+    function updateKissDisplay() {
+      kissElement.textContent = `تعداد بوس پیشنهادی تا ${kissTime} ثانیه آینده: ${kissNumber}`;
+    }
+
+    updateKissDisplay();
+    setInterval(() => {
+      kissTime--;
+      if (kissTime <= 0) {
+        kissTime = 30;
+        kissNumber = getRandomKiss();
+      }
+      updateKissDisplay();
+    }, 1000);
+  </script>
 
 </body>
 </html>
