--- a/meail.html
+++ b/meail.html
@@ -18,7 +18,7 @@
         }
         @font-face {
             font-family: a;
-            src: url(./Mj_Ghalam-1.TTF);
+            src: url(./katibeh.ttf);
         }
         body {
             font-family: a;
@@ -82,14 +82,14 @@
             display: block;
         }
         .card-title-secondary{
-            font-size: 16px;
+            font-size: 12px;
             letter-spacing: 3px;
             margin-top: -10px;
             text-transform: uppercase;
         }
         .card-title-main {
             font-family: a;
-            font-size: 20px;
+            font-size: 15px;
             font-weight: 400;
         }
         .card-title-apostrophe {
@@ -225,8 +225,8 @@
             </div>
             <div class="card-body">
                 <p>تقدیم به همسر نازم:</p>
-                <p style="margin-top: 50px;">خیلی خوشبختم که دارمت عزیزم و تو عزیزترینی واسم فرشته خوشگلم من خیلی دوستت دارم و دیوونتم جوجو جونم بغل تو واسه من امن ترین جایی هستش که وجود داره گوگولی مگولی منی توو</p>
-                <p style="margin-top: 100px;">تا ابد مال خودمی -علی</p>
+                <p style="margin-top: 40px;">خیلی خوشبختم که دارمت عزیزم و تو عزیزترینی واسم فرشته خوشگلم من خیلی دوستت دارم و دیوونتم جوجو جونم بغل تو واسه من امن ترین جایی هستش که وجود داره گوگولی مگولی منی توو</p>
+                <p style="margin-top: 80px;">تا ابد مال خودمی -علی</p>
             </div>
         </div>
     </div>
